force-app/main/default/objects/Quote__c/fields/CurrencyConversionRatio__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionRatio__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Currency Conversion Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>