force-app/main/default/objects/Quote__c/fields/DerivedFromId__c.field-meta.xml
<CustomField>
    <fullName>DerivedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Derived From</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Versions</relationshipLabel>
    <relationshipName>QuoteVersions</relationshipName>
    <type>Lookup</type>
</CustomField>