force-app/main/default/objects/Quote__c/fields/EstimateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>