force-app/main/default/objects/Quote__c/fields/LastProposalSync__c.field-meta.xml
<CustomField>
    <fullName>LastProposalSync__c</fullName>
    <label>Last Proposal Sync</label>
    <type>DateTime</type>
</CustomField>