force-app/main/default/objects/Quote__c/fields/ProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>ProfitAmount__c</fullName>
    <label>Profit Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>