force-app/main/default/objects/Quote__c/fields/ProposalId__c.field-meta.xml
<CustomField>
    <fullName>ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>