force-app/main/default/objects/Quote__c/fields/QuoteDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteDate__c</fullName>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>