force-app/main/default/objects/Quote__c/fields/ReferenceProjectID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceProjectID__c</fullName>
    <label>Reference Project ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>