force-app/main/default/objects/Quote__c/fields/SectionHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SectionHierarchy__c</fullName>
    <label>Section Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>