force-app/main/default/objects/Quote__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>ServiceQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>