force-app/main/default/objects/Quote__c/fields/ServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartDate__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>