force-app/main/default/objects/Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
                <isActive>false</isActive>
                <label>Contract Negotiation</label>
            </value>
            <value>
                <fullName>Contracted</fullName>
                <isActive>false</isActive>
                <label>Contracted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>