force-app/main/default/objects/Quote__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Quote must have a type of template</errorMessage>
        <filterItems>
            <field>Quote__c.Type__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quotes (Template)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>