force-app/main/default/objects/Quote__c/fields/TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>TimePeriod__c</fullName>
    <label>Time Periods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Quarters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>