force-app/main/default/objects/Quote__c/fields/TimePeriodsGroupMethod__c.field-meta.xml
<CustomField>
    <fullName>TimePeriodsGroupMethod__c</fullName>
    <label>Time Periods Group Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TimePeriod__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>