force-app/main/default/objects/Quote__c/fields/TotalAmountBeforeDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBeforeDiscount__c</fullName>
    <label>Total Amount Before Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>