force-app/main/default/objects/Quote__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;Quote&apos;</defaultValue>
    <description>Indicates the type of quote.</description>
    <inlineHelpText>Indicates the type of quote.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Scenario</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>