force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>QuoteDate__c</columns>
    <columns>Status__c</columns>
    <columns>ServiceStartDate__c</columns>
    <columns>ServiceEndDate__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>